[package]
name = "devtools"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
jwt = { version = "0.11", default-features = false }
iced = { git = "https://github.com/simonhdickson/iced.git" }
serde_json = { version = "1.0", default-features = false }

[features]
default = []

[profile.release]
lto = true
